[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/characters/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/environment/DirtToGrassTiles.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/environment/EnvironmentParallax.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/levels/LevelBase.gd" type="Script" id=4]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0

[node name="LevelBase" type="Node2D"]
script = ExtResource( 4 )

[node name="EnvironmentParallax" parent="." instance=ExtResource( 3 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirtToGrassTiles" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="RightBottomBound" type="Position2D" parent="."]
position = Vector2( 306, 186 )

[node name="DeathWaitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="tree_exiting" from="." to="." method="_on_LevelBase_tree_exiting"]
[connection signal="died" from="Player" to="DeathWaitTimer" method="start" flags=6]
[connection signal="timeout" from="DeathWaitTimer" to="." method="_on_DeathWaitTimer_timeout"]
